tests/invalid/annotation_forward_ref_non_expr_stmt/main.py
def main() -> None:
    x: "def f() -> int:\n    return 1" = 1
